--- a/src/assets/component/Mel/Mel.css
+++ b/src/assets/component/Mel/Mel.css
@@ -14,6 +14,8 @@
   border-radius: 2rem;
   height: 4vh;
   padding-left: 2rem;
+  background: transparent;
+  border: 1px solid var(--color-bg-variant);
 }
 
 .mel {
@@ -76,6 +78,7 @@ table {
 
   table {
     font-size: 0.5rem;
+    margin-left: -1rem;
   }
 
   .search {
