--- a/src/assets/component/Header/Header.css
+++ b/src/assets/component/Header/Header.css
@@ -51,6 +51,20 @@ header {
   font-size: 0.9rem;
 }
 
+/* ========= IMAGE ============= */
+
+.image__cat {
+    background: linear-gradient(var(--color-primary), transparent);
+    width: 22rem;
+    height: 25rem;
+    position: absolute;
+    left: calc(50% - 11rem);
+    margin-top: 7.5rem;
+    border-radius: 12rem 12rem 0 0;
+    overflow: hidden; 
+    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+}
+
 /* =========== MEDIA QUERIS (SMALL DEVICES)========== */
 
 @media  screen and (max-width: 600px) {
