--- a/src/assets/component/Mel/Mel.css
+++ b/src/assets/component/Mel/Mel.css
@@ -16,6 +16,7 @@
   padding-left: 2rem;
   background: transparent;
   border: 1px solid var(--color-bg-variant);
+  color: var(--color-white);
 }
 
 .mel {
